/* -*- Mode:protobuf; indent-tabs-mode:nil; -*- */

syntax = "proto3";

package ndn.vsync.proto;

// Version Vector
message VV {
  repeated uint64 entry = 1;
}

// View Info
message ViewInfo {
  message Entry {
    string nid = 1;
  }

  repeated Entry entry = 1;
}

// Vsync data content
message Content {
  uint64 view_num = 1;
  string leader_name = 2;
  VV vv = 3;
  bytes content = 4;
}

// Vsync snapshot content
message Snapshot {
  message Entry {
    string nid = 1;
    uint64 seq = 2;
  }

  uint64 view_num = 1;
  string leader_name = 2;
  repeated Entry entry = 3;
}

// Vsync FIFO-ordered data content
message FIFOData {
  string content = 1;
  uint64 prev = 2;
}

// Vsync causally-ordered data content
message COData {
  message EVV {
    message Entry {
      string nid = 1;
      uint64 seq = 2;
    }

    repeated Entry entry = 1;
  }

  string content = 1;
  EVV evv = 2;
}

// Vsync consensus data content
message TOData {
  enum Command {
    VOTE = 0;
    COMMIT = 1;
  }

  Command cmd = 1;
  uint64 num = 2;
  string param = 3;
}
